--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,27 @@
     background-size: cover;
 }
 
+.aboutBackground {
+    background: url("../assets/images/background-1.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.songsBackground {
+    background: url("../assets/images/background-2.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;    
+}
+
+.bookingsBackground {
+    background: url("../assets/images/background-3.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;    
+}
+
 /* --------------------------------------------- Header */
 header {
     background: url("../assets/images/spiral.jpg");
@@ -58,14 +79,104 @@ footer::before {
     font-size: 30px;    
 }
 
+/* --------------------------------------------- Section */
+
+
+section {
+    font-family: "Roboto", sans-serif;
+    color: #000000;
+}
+
 /* --------------------------------------------- Index */
 
 .welcomeContainer {
     padding: 50px;
+    font-weight: 700; 
 }
 
 .welcomeMessage {
     text-align: center;
+}
+
+/* --------------------------------------------- About */
+
+.aboutContainer {
+    padding: 50px;
+    font-weight: 300; 
+    text-align: center;
+}
+
+.aboutIntro {
+    text-align: center;
+}
+
+.aboutMeet {
+    display: inline-block;
+    padding-top: 50px;
+    max-width: 720px;
+}
+
+.aboutMeet h3{
+    text-align: center;
+    
+}
+
+
+
+/* --------------------------------------------- Songs */
+
+.songsContainer {
+    padding: 50px 0;
+    font-weight: 300; 
+    text-align: center;
+}
+
+.songsAudioContainer {
+    padding: 30px 0;
+    display: inline-block;
+}
+
+
+/* --------------------------------------------- Bookings */
+
+.bookingsContainer {
+    padding: 50px 0;
+    font-weight: 300; 
+    text-align: center;
+}
+
+.bookingsListContainer {
+    padding: 30px 0;
+    display: inline-block;
+}
+
+.bookingsFormContainer {
+    padding: 30px 0;
+    display: inline-block;
+}
+
+.center-form {
+    padding-top: 10px;
+    margin: 0 auto;
+    max-width: 70%;
+}
+
+button[type="submit"] {
+    margin-top: 15px;
+    margin-bottom: 20px;
+    color: #fafafa;
+    background-color: #e84610;
+}
+
+input[type="date"]:before {
+    content: attr(placeholder) !important;
+    color: #aaa;
+    margin-right: 0.5em;
+}
+
+input[type="date"]:focus:before,
+input[type="date"]:valid:before {
+    content: "";
 }
 
 /* --------------------------------------------- Media Queries */
