--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,13 @@
     background-size: cover;    
 }
 
+.contactBackground {
+    background: url("../assets/images/background-4.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;    
+}
+
 /* --------------------------------------------- Header */
 header {
     background: url("../assets/images/spiral.jpg");
@@ -150,10 +157,25 @@ section {
     display: inline-block;
 }
 
-.bookingsFormContainer {
-    padding: 30px 0;
+/* --------------------------------------------- Contact */
+
+.contactContainer {
+    padding: 50px 0;
+    font-weight: 300; 
+    text-align: center;
+}
+
+.contactEmailPostalContainer {
+    padding: 50px 0;
+    font-weight: 300; 
     display: inline-block;
 }
+
+.contactEmail, 
+.contactPostal{
+    padding: 30px 0;
+}
+/* --------------------------------------------- Forms */
 
 .center-form {
     padding-top: 10px;
